--- a/index4.html
+++ b/index4.html
@@ -25,7 +25,19 @@
 <button onclick="check()">CLICK ME</button>
 <button onclick="login()">LOGIN</button>
 <button onclick="multiple()">Rank</button><br>
-<a href="https://fb.com/sigabbylopez">GO TO MY FB</a>
+
+
+
+<a href="https://fb.com/sigabbylopez">GO TO MY FB</a><br>
+
+<label for="">Iput Values: </label>
+<input type="text" id="1"><br>
+<label for="">Iput Values: </label>
+<input type="text" id="2"><br>
+<button onclick="execute()"> + </button>
+<button onclick="execute()">-</button>
+<button onclick="execute()">*</button>
+<button onclick="execute()">/</button>
 <script src="script2.js"></script>
 </body>
 </html>
